# AuvroAI

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: build-installers.yml
assets/: auvroai.desktop  icon.icns
packaging/linux/: auvroai.desktop
scripts/: installer.nsi
src/: chat_pipeline.rs  env.rs  main.rs  provider.rs  secrets.rs
src/api/: ai.rs  conversations.rs  mod.rs  profile.rs  supabase.rs
src/cache/: mod.rs  model_metadata.rs  response_cache.rs
src/ui/: auth.rs  chat.rs  mod.rs  settings.rs  sidebar.rs
tools/: package-linux.sh  package-macos.sh  package-windows.ps1
wix/: main.wxs
