[package]
name = "AuvroAI"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "*", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui_commonmark = { version = "*", default-features = false, features = ["pulldown_cmark"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = "3.6"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
blake3 = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
uuid = { version = "1", default-features = false, features = ["serde", "v4"] }
rfd = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
