[package]
name = "AuvroAI"
version = "0.1.0"
edition = "2024"
description = "Cross-platform Rust desktop AI chat client with streaming responses and provider failover."
license = "MIT"
authors = ["Anup"]

[[bin]]
name = "auvro_ai"
path = "src/main.rs"

[package.metadata.winres]
FileDescription = "AuvroAI"
ProductName = "AuvroAI"
LegalCopyright = "Copyright 2026 AuvroAI"

[package.metadata.bundle]
name = "AuvroAI"
identifier = "com.auvroai.app"
short_description = "Desktop AI chat client built with Rust and egui."
version = "1.0.0"
copyright = "Copyright 2024 AuvroAI"
category = "public.app-category.productivity"
icon = [
	"assets/icon.icns",
]

[package.metadata.wix]
manufacturer = "AuvroAI"
license = "LICENSE"
product-icon = "assets/icon.ico"
eula = false

[package.metadata.deb]
maintainer = "Anup"
copyright = "2026, Anup"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
	["target/release/auvro_ai", "usr/bin/auvro_ai", "755"],
	["assets/icon.png", "usr/share/icons/auvroai.png", "644"],
	["assets/auvroai.desktop", "usr/share/applications/auvroai.desktop", "644"],
]

[dependencies]
eframe = { version = "*", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui_commonmark = { version = "*", default-features = false, features = ["pulldown_cmark"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = "3.6"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
blake3 = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
uuid = { version = "1", default-features = false, features = ["serde", "v4"] }
rfd = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["std", "dx12", "vulkan"] }

[target.'cfg(not(windows))'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["std", "vulkan", "gles"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[profile.release.build-override]
opt-level = 3
